[package]
name = "native-multisig-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
solana-program = "1.15.2"
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
thiserror = "1.0.38"

[features]
no-entrypoint = []


[lib]
name = "multisig_wallet"
crate-type = ["cdylib", "lib"]
